utilizando url generator

--- a/views/ola.twig
+++ b/views/ola.twig
@@ -1,1 +1,5 @@
-Olá {{ nome }}
+Olá {{ nome }}.
+<br>
+* Quero ir para a página <a href="{{ path('index') }}">Index</a>.
+<br>
+URL absoluta <a href="{{ url('index') }}">Index</a>.
