trabalhando com layouts/templates

--- a/views/clientes.twig
+++ b/views/clientes.twig
@@ -1,7 +1,13 @@
-<h1>Clientes</h1>
+{% extends 'layout.twig' %}
 
+{% block aplicacao %}
+    <h1>Clientes</h1>
+{% endblock %}
+
+{% block conteudo %}
 <ul>
     {% for cliente in clientes %}
         <li>{{ cliente.nome }} ({{ cliente.email }})</li>
     {% endfor %}
 </ul>
+{% endblock %}
