--- a/views/index.twig
+++ b/views/index.twig
@@ -1,1 +1,11 @@
+{% extends 'layout.twig' %}
+
+{% block titulo %}Página index{% endblock %}
+
+{% block aplicacao %}
+    <h1>Página Index</h1>
+{% endblock %}
+
+{% block conteudo %}
 Olá Mundo! Esse é o index.
+{% endblock %}
